# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
