[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://{{cookiecutter.github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.github_handle}}.github.io/{{cookiecutter.project_name}}/"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "tox-uv",
    {% if cookiecutter.deptry == 'y' %}"deptry",{% endif %}
    "mypy",
    {% if cookiecutter.codecov == 'y' %}"pytest-cov",{% endif %}
    "ruff",
    {% if cookiecutter.mkdocs == 'y' %}"mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",{% endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

{% if cookiecutter.layout == "flat" -%}
[tool.setuptools]
py-modules = ["{{cookiecutter.project_slug}}"]
{%- endif %}

[tool.mypy]
files = [
    {%- if cookiecutter.layout == "src" -%}
    "src",
    {%- else -%}
    "{{cookiecutter.project_slug}}",
    {%- endif -%}
    "tests"
]
follow_untyped_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    {%- if cookiecutter.layout == "src" -%}
    "src"
    {%- else -%}
    "{{cookiecutter.project_slug}}"
    {%- endif -%}
]
{% endif %}
